--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "@types/jest": "^23.3.12"
   },
   "scripts": {
-    "test": "jest"
+    "test": "node index.js"
   },
   "dependencies": {
     "discord.js": "^12.5.3"
