fill a huge lot of stuff

--- a/config/config-template.json
+++ b/config/config-template.json
@@ -5,6 +5,10 @@
   "lang": "en",
   "admin_ids": [ ],
 
+  "_default": {
+    "channel": "main",
+    "quality": "128k"
+  },
   "stream-links": {
     "main": {
       "320k": "https://stream.radioparadise.com/aac-320",
