--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "devDependencies": {
-    "jest": "^23.6.0",
-    "@types/jest": "^23.3.12"
+    "@types/jest": "^23.3.12",
+    "jest": "^23.6.0"
   },
   "scripts": {
     "test": "node index.js"
   },
   "dependencies": {
-    "discord.js": "^12.5.3"
+    "@discordjs/opus": "^0.5.3",
+    "discord.js": "^12.5.3",
+    "ffmpeg-static": "^4.4.0"
   }
 }
