--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "jest": "^23.6.0"
   },
   "scripts": {
-    "test": "node index.js"
+    "run": "node index.js"
   },
   "dependencies": {
     "@discordjs/opus": "^0.5.3",
