--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "jest": "^27.0.4"
   },
   "scripts": {
-    "run": "node index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "discord.js": "^12.5.3",
