--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@discordjs/opus": "^0.5.3",
     "discord.js": "^12.5.3",
     "ffmpeg-static": "^4.4.0"
   }
